stylesheets/_site-navigation.scss
/** === Site Branding === */

#site-navigation {
	margin-right: $x-space-xs;
}

.main-navigation {
	
	text-align: right;
	
	#primary-menu {
		
		.toggled-on button.dropdown-toggle.toggled-on svg {
			transform: scaleY(-1);
		}

	}

	> div > ul {

		display: none;
		margin: 0;
		padding: 0;

		li {
			display: block;
			list-style: none;
			padding-left: 0;
			
			ul {
				text-align: left;
			}

			a {
				display: block;

				&:hover {
					color: $x-color-accent-base;
					text-decoration: none;
				}
			}

			&:before {
				content: "";
				display: none;
			}

			&.current-menu-item a {
				color: $x-color-accent-base;
			}
		}

		> li {

			> a {
				color: $x-color-secondary-base;
				@include link-transition;
				clear: both;
				display: block;
				width: 100%;
				
				padding: $x-space-xs;
			}

			&#more-menu {
				display: none;
				
				ul.sub-menu {
					margin-top: 4px;

					li {
						position: relative;
					}

					button.dropdown-toggle {
						position: absolute;
						right: 0;
					}
				}
			}
		}

		.menu-item-has-children {

			position: relative;

			> a {
				padding-right: $x-space-lg;
			}

			ul {
				background-color: $x-color-shade-white;
				position: absolute;
				left: -999em;
				z-index: 99999;
				margin-left: 0;
				-webkit-transition: opacity 0.5s ease-in-out;
				-moz-transition:    opacity 0.5s ease-in-out;
				transition:         opacity 0.5s ease-in-out;

				li a:before {
					content: "\2014\00a0";
				}
			}

			button.dropdown-toggle {
				background-color: transparent;
				color: $x-color-primary-base;
				padding: $x-space-xs;
				line-height: $x-space-xs;
				border: none;
				box-shadow: inherit;
				position: absolute;
				right: 0;
				top: 0;
				vertical-align: middle;
				
				&:focus {
					svg {
						fill: $x-color-accent-base;
					}
				}
				
				svg {
					position: relative;
					top: 0.05em;
				}
				
				span {
					display: inline-block;
					height: 20px;
					overflow: hidden;
				}
			}

		}

	}

	// Mobile Menu
	@include media( mobile ) { // prevents unneccesary overrides on larger breakpoints

		#primary-menu {
			
			overflow: hidden;
			
			> li:first-child:before {
				display: none;
			}
			
			
			li {
				position: relative;
				
				&:before {
					display: block;
					content: "\020";
					width: 300vw;
					left: -100vw;
					border-top: solid 1px $x-color-border-base;
					position: absolute;
				}
			}
			
		}
		
		.dropdown-toggle {
			z-index: 999999;
		}

		&.toggled-on {
			
			ul {
				text-align: left;
				> li {
					padding-right: $x-space-md;
				}
			}
			
			ul.sub-menu {
//				margin-top: $x-space-xs;
			}
			
			> div > ul {

				border-top: solid 1px grey;
				border-bottom: solid 1px grey;
				border-color: $x-color-border-base;
				background-color: $x-color-shade-white;
				padding: $x-space-xs;
				display: block;
				width: 100%;
				z-index: 500;
			
				position: absolute;
				//			bottom: 0;
				//			left: 0;

				li > a {
					font-size: $x-font-size-sm;
					padding: $x-space-xxs $x-space-xs;
				
				}
				.menu-item-has-children {
					> a {
						padding-right: $x-space-lg;
					}

					> button {
						padding-top: $x-space-xxs;
						padding-bottom: $x-space-xxs;
					}
				}

				li.toggled-on > ul {
					width: $x-grid-column-3;
					padding-left: $x-space-sm;
					position: relative;
					left: inherit;
					right: 0;
					width: 100%;
					opacity: 1;

					> li.toggled-on > ul {
						position: relative;
						width: 100%;
					}
				}
			}
			
		}
	}

	@include media( tablet ) {

		margin: $x-space-md 0;
		display: block;
		width: 100%;

		> div > ul {

			display: block;

			> li {
				display: inline-block;
				margin-left: -4px;
				
				a {
					font-size: $x-font-size-sm;
					font-weight: 600;
					padding: $x-space-xs;
				}

				> ul {
					border: 1px solid grey;
					border-color: $x-color-border-base;
					
					#page & button.dropdown-toggle {
						padding: $x-space-xxs;
					}

					li {
						display: block;

						a {
							padding-top: $x-space-xxs;
							padding-bottom: $x-space-xxs;
						}

						&.menu-item-has-children > button {
							padding-top: $x-space-xxs;
							padding-bottom: $x-space-xxs;
						}
					}
				}

				&#more-menu {

					display: inline-block;

					button {
						left: inherit;
						position: relative;
						right: inherit;
					}
				}
			}
			
			.toggled-on > ul {
				width: $x-grid-column-3;
				left: inherit;
				right: 0;
				opacity: 1;

				> li.toggled-on > ul {
					padding-left: $x-space-sm;
					left: inherit;
					position: relative;
					right: 0;
					width: 100%;
				}
			}

		}
	}

}

.menu-toggle {

	position: absolute;
	bottom: calc( #{$x-space-sm} + #{$x-space-xxs} );
	right: $x-space-sm;
	z-index: 9999;

	@include media( tablet ) {
		display: none;
	}
}

.social-navigation {

	@include media( mobile ) {
		background-color: $x-color-shade-white;
		height: $x-space-xl;
		border-top: 1px solid grey;
		border-color: $x-color-border-base;
		bottom: 0;
		left: 0;
		position: fixed;
		width: 100%;
		z-index: 600;
		
		padding: $x-space-sm;
	}

	@include media( tablet ) {
		text-align: left;
	}

	ul.social-links-menu {

		margin: 0;
		line-height: .6em;
		padding-left: 0;

		li {
			display: inline-block;
			list-style: none;
			padding: 0;

			&:before {
				content: none;
				display: none;
			}

			a {
				display: inline-block;
				line-height: 1;

				svg {
					@include svg-transition;
					display: block;
					line-height: 1;

					&:hover {
						fill: $x-color-primary-base;
					}

					@include media( mobile ) {
						width: 35px;
						height: 35px;
					}
				}
			}
		}
	}
}

.post-navigation {
	margin: $x-space-lg 0;
	
	border-top: 1px solid grey;
	border-top-color: $x-color-border-base;
	border-bottom: 1px solid grey;
	border-bottom-color: $x-color-border-base;

	&:last-child {
		margin-bottom: 0;
		border-bottom: none;
	}

	.nav-links {

		display: flex;
		flex-direction: column;

		a {
			display: block;
			font-size: $x-font-size-md;
			font-weight: 700;

			&:focus .post-title,
			&:hover .post-title {
				color: $x-color-accent-base;
				text-decoration: none;
			}

			.meta-nav {
				color: $x-color-words-subtle;
				display: block;
				padding: $x-space-xxs 0;
				text-transform: uppercase;
				font-weight: 400;
				font-size: $x-font-size-xxs;
			}
		}

		.nav-next {
			text-align: right;
		}

		& > div {
			margin: $x-space-sm;
		}
	}

	@include media( tablet ) {
		margin: $x-space-sm 0;
		display: inherit;

		.nav-links {
			max-width: $x-grid-column-10;
			margin-left: auto;
			margin-right: auto;
			flex-direction: row;
			justify-content: center;
			align-content: center;

			& > div {
				margin: $x-space-lg $x-space-sm;
				max-width: $x-grid-column-5;
				width: 50%;

				&:only-child {
					width: 100%;
					max-width: 100%;
				}
			}
		}
	}
}

.posts-navigation {
	@include media( tablet ) {

		.nav-links {
			max-width: $x-grid-column-10;
			margin-left: auto;
			margin-right: auto;
			flex-direction: row;
			justify-content: center;
			align-content: center;

			& > div {
				margin: $x-space-lg $x-space-sm;
				max-width: $x-grid-column-5;
				width: 50%;
			}
		}
	}
}

.comment-navigation,
.posts-navigation {
	border-top: 1px solid grey;
	border-color: $x-color-border-base;

	a {
		border: 0;
		display: block;
		font-weight: 700;
		padding: $x-space-sm 0;
	}

	.nav-links {
		display: flex;
		flex-direction: column;

		@include media( tablet ) {
			flex-direction: row;
		}
	}
	
	.nav-previous,
	.nav-next {
		width: 50%;

		&:only-child {
			max-width: 100%;
			width: 100%;
		}

		svg {
			fill: $x-color-accent-base;
			vertical-align: middle;
		}
	}

	.nav-next {
		text-align: right;
	}
}

.comment-navigation a:focus,
.comment-navigation a:hover,
.post-navigation a:focus,
.post-navigation a:hover,
.posts-navigation a:focus,
.posts-navigation a:hover {
	color: $x-color-accent-base;
}

